--- a/mintty/.minttyrc
+++ b/mintty/.minttyrc
@@ -1,29 +1,28 @@
 BoldAsFont=-1
-Font=DejaVu Sans Mono for Powerline
+Font=Fira Mono for Powerline
 FontWeight=400
 FontIsBold=no
-ForegroundColour=255,255,255
-BackgroundColour=0,0,0
+ForegroundColour=131,148,150
+BackgroundColour=0,43,54
 Transparency=off
 CursorType=line
 Term=xterm-256color
-ForegroundColour=131, 148, 150
-BackgroundColour=  0,  43,  54
-CursorColour=    220,  50,  47
+CursorColour=220,50,47
 
-Black=             7,  54,  66
-BoldBlack=         0,  43,  54
-Red=             220,  50,  47
-BoldRed=         203,  75,  22
-Green=           133, 153,   0
-BoldGreen=        88, 110, 117
-Yellow=          181, 137,   0
-BoldYellow=      101, 123, 131
-Blue=             38, 139, 210
-BoldBlue=        131, 148, 150
-Magenta=         211,  54, 130
-BoldMagenta=     108, 113, 196
-Cyan=             42, 161, 152
-BoldCyan=        147, 161, 161
-White=           238, 232, 213
-BoldWhite=       253, 246, 227
+Black=7,54,66
+BoldBlack=0,43,54
+Red=220,50,47
+BoldRed=203,75,22
+Green=133,153,0
+BoldGreen=88,110,117
+Yellow=181,137,0
+BoldYellow=101,123,131
+Blue=38,139,210
+BoldBlue=131,148,150
+Magenta=211,54,130
+BoldMagenta=108,113,196
+Cyan=42,161,152
+BoldCyan=147,161,161
+White=238,232,213
+BoldWhite=253,246,227
+FontHeight=11
